--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,10 +9,10 @@
 
 #img-main {
   padding: 0 0 1.68rem 0;
-  /* max-width: 80%; */
+  /* max-width: 50%; */
   vertical-align: center;
   width: 100%;
-  /* height: 50rem; */
+  /* height: 245px; */
   /* height: 100%; */
   object-fit: contain;
   /* position: relative; */
