--- a/templates/editarUser.html
+++ b/templates/editarUser.html
@@ -163,9 +163,7 @@
       <label for="correo">Correo Electrónico</label>
       <span>
         <i class="fa-solid fa-envelope"></i>
-        <input type="email" class="input_user" name="Correo" id="correo" value="{{
-    usuario[5]
-  }}" />
+        <input type="email" class="input_user" name="Correo" id="correo" value="{{ usuario[5] }}" />
       </span>
     </p>
     <p>
@@ -189,6 +187,7 @@
     <p>
       <label for="anteriorContrasena">Anterior Contraseña</label>
       <span>
+        <i class="fa-solid fa-key"></i>
         <input type="password" class="input_user" name="Anterior_Contrasena" id="anteriorContrasena"
           placeholder="Anterior Contraseña" />
       </span>
@@ -196,6 +195,7 @@
     <p>
       <label for="nuevaContrasena">Nueva Contraseña</label>
       <span>
+        <i class="fa-solid fa-key"></i>
         <input type="password" class="input_user" name="Nueva_Contrasena" id="nuevaContrasena"
           placeholder="Nueva Contraseña" />
       </span>
@@ -203,6 +203,7 @@
     <p>
       <label for="repetirContrasena">Repetir Contraseña</label>
       <span>
+        <i class="fa-solid fa-key"></i>
         <input type="password" class="input_user" name="Repetir_Contrasena" id="repetirContrasena"
           placeholder="Repetir Contraseña" />
       </span>
