--- a/static/css/base-forms.css
+++ b/static/css/base-forms.css
@@ -3,7 +3,8 @@ h2 {
   padding: 1rem 0 1rem 0;
 }
 
-.dataUser {
+.form_dataUser {
+  display: none;
 }
 
 .form {
@@ -12,7 +13,7 @@ h2 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  /* margin: auto 50% auto auto; */
+  /* margin: auto auto auto 50%; */
   padding: 1rem;
 }
 
@@ -44,9 +45,10 @@ h2 {
 }
 .form p span {
   display: flex;
-  justify-content: flex-end;
-  width: 35rem;
+  justify-content: flex-start;
+  /* width: 35rem; */
   gap: 1rem;
+  padding: 0 1rem 0 1rem;
   align-items: center;
   /* background-color: firebrick; */
 }
