--- a/templates/gestionAdministradores.html
+++ b/templates/gestionAdministradores.html
@@ -78,18 +78,23 @@
 <!-- AREA PRINCIPAL -->
 <section class="dataUser">
   <h2>Gestión de Administradores</h2>
-  <button
-    class="btn-submit btn-submit-blue btnAgregarAdmin"
-    id="btnAgregarAdmin"
-  >
-    Agregar Administrador
-  </button>
+  <p>
+    <span>
+      <button
+        class="btn-submit btn-submit-blue btnAgregarAdmin"
+        id="btnAgregarAdmin"
+      >
+        Agregar Administrador
+      </button>
+    </span>
+  </p>
   <section class="form_dataUser" id="form_dataUser" display="none">
     <form action="/addAdmin" class="form inputs_dataUser" method="POST">
       <h2>Crear Nuevo Administrador</h2>
       <p>
         <label for="cedula">Cédula</label>
         <span>
+          <i class="fa-solid fa-id-card"></i>
           <input
             type="text"
             class="input_user"
@@ -102,6 +107,7 @@
       <p>
         <label for="nombre">Nombre</label>
         <span>
+          <i class="fa-solid fa-person"></i>
           <input
             type="text"
             class="input_user"
@@ -114,6 +120,7 @@
       <p>
         <label for="apellido">Apellido</label>
         <span>
+          <i class="fa-solid fa-person"></i>
           <input
             type="text"
             class="input_user"
@@ -126,6 +133,7 @@
       <p>
         <label for="fechaNacimiento">Fecha de Nacimiento</label>
         <span>
+          <i class="fa-solid fa-cake-candles"></i>
           <input
             type="date"
             class="input_user"
@@ -137,6 +145,7 @@
       <p>
         <label for="correo">Correo Electrónico</label>
         <span>
+          <i class="fa-solid fa-envelope"></i>
           <input
             type="email"
             class="input_user"
@@ -149,6 +158,7 @@
       <p>
         <label for="celular">Celular</label>
         <span>
+          <i class="fa-solid fa-mobile-screen-button"></i>
           <input
             type="phone"
             class="input_user"
@@ -161,6 +171,7 @@
       <p>
         <label for="tipoUsuario">Tipo de Usuario</label>
         <span>
+          <i class="fa-solid fa-ranking-star"></i>
           <input
             type="text"
             class="input_user"
@@ -174,6 +185,7 @@
       <p>
         <label for="anteriorContrasena">Contraseña</label>
         <span>
+          <i class="fa-solid fa-key"></i>
           <input
             type="password"
             class="input_user"
@@ -186,6 +198,7 @@
       <p>
         <label for="nuevaContrasena">Repetir Contraseña</label>
         <span>
+          <i class="fa-solid fa-key"></i>
           <input
             type="password"
             class="input_user"
