--- a/templates/users.html
+++ b/templates/users.html
@@ -1,8 +1,24 @@
 {% extends "base.html" %} {% block head %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base.css') }}" />
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-tables.css') }}" />
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-forms.css') }}" />
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-buttons.css') }}" />
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base.css') }}"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-tables.css') }}"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-forms.css') }}"
+/>
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="{{ url_for('static', filename='css/base-buttons.css') }}"
+/>
 <!-- <link
   rel="stylesheet"
   type="text/css"
@@ -23,7 +39,13 @@
       <input type="date" class="campo-modal" disabled />
 
       <label><b>Comentario</b></label>
-      <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30" rows="10"></textarea>
+      <textarea
+        class="campo-modal"
+        placeholder="Comentario"
+        maxlength="630"
+        cols="30"
+        rows="10"
+      ></textarea>
       <!-- <input type="text" placeholder="Comentario" /> -->
 
       <!-- <input type="checkbox" checked="checked" /> Recordarme -->
@@ -33,13 +55,24 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+          <img
+            src="img/svg/fa/check-solid.svg"
+            alt="icono logout"
+            height="30"
+          />
         </button>
       </div>
       <div>
-        <button type="button" onclick="document.getElementById('modal-id02').style.display='none'"
-          class="modal-cancelbtn">
-          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+        <button
+          type="button"
+          onclick="document.getElementById('modal-id02').style.display='none'"
+          class="modal-cancelbtn"
+        >
+          Cancelar<img
+            src="img/svg/fa/xmark-solid.svg"
+            alt="icono logout"
+            height="30"
+          />
         </button>
       </div>
     </div>
@@ -63,7 +96,14 @@
       <input type="date" class="campo-modal" disabled />
 
       <label><b>Comentario</b></label>
-      <textarea class="campo-modal" placeholder="Comentario" maxlength="630" cols="30" rows="10" disabled></textarea>
+      <textarea
+        class="campo-modal"
+        placeholder="Comentario"
+        maxlength="630"
+        cols="30"
+        rows="10"
+        disabled
+      ></textarea>
       <!-- <input type="text" placeholder="Comentario" /> -->
 
       <!-- <input type="checkbox" checked="checked" /> Recordarme -->
@@ -73,13 +113,24 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+          <img
+            src="img/svg/fa/check-solid.svg"
+            alt="icono logout"
+            height="30"
+          />
         </button>
       </div>
       <div>
-        <button type="button" onclick="document.getElementById('modal-id03').style.display='none'"
-          class="modal-cancelbtn">
-          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+        <button
+          type="button"
+          onclick="document.getElementById('modal-id03').style.display='none'"
+          class="modal-cancelbtn"
+        >
+          Cancelar<img
+            src="img/svg/fa/xmark-solid.svg"
+            alt="icono logout"
+            height="30"
+          />
         </button>
       </div>
     </div>
@@ -116,13 +167,24 @@
       <div>
         <button type="submit" class="modal-confirmbtn">
           Confirmar
-          <img src="img/svg/fa/check-solid.svg" alt="icono logout" height="30" />
+          <img
+            src="img/svg/fa/check-solid.svg"
+            alt="icono logout"
+            height="30"
+          />
         </button>
       </div>
       <div>
-        <button type="button" onclick="document.getElementById('modal-id04').style.display='none'"
-          class="modal-cancelbtn">
-          Cancelar<img src="img/svg/fa/xmark-solid.svg" alt="icono logout" height="30" />
+        <button
+          type="button"
+          onclick="document.getElementById('modal-id04').style.display='none'"
+          class="modal-cancelbtn"
+        >
+          Cancelar<img
+            src="img/svg/fa/xmark-solid.svg"
+            alt="icono logout"
+            height="30"
+          />
         </button>
       </div>
     </div>
@@ -142,76 +204,139 @@
         <label for="cedula">Cédula</label>
         <span>
           <i class="fa-solid fa-id-card"></i>
-          <input type="text" class="input_user" name="Cedula" id="cedula" value="{{ usuario[1] }}" />
+          <input
+            type="text"
+            class="input_user"
+            name="Cedula"
+            id="cedula"
+            value="{{ usuario[1] }}"
+          />
         </span>
       </p>
       <p>
         <label for="nombre">Nombre</label>
         <span>
           <i class="fa-solid fa-person"></i>
-          <input type="text" class="input_user" name="Nombre" id="nombre" value="{{ usuario[2] }}" />
+          <input
+            type="text"
+            class="input_user"
+            name="Nombre"
+            id="nombre"
+            value="{{ usuario[2] }}"
+          />
         </span>
       </p>
       <p>
         <label for="apellido">Apellido</label>
         <span>
           <i class="fa-solid fa-person"></i>
-          <input type="text" class="input_user" name="Apellidos" id="apellido" value="{{ usuario[3] }}" />
+          <input
+            type="text"
+            class="input_user"
+            name="Apellidos"
+            id="apellido"
+            value="{{ usuario[3] }}"
+          />
         </span>
       </p>
       <p>
         <label for="fechaNacimiento">Fecha de Nacimiento</label>
         <span>
           <i class="fa-solid fa-cake-candles"></i>
-          <input type="date" class="input_user" name="Fecha_Nacimiento" id="fechaNacimiento" value="{{ usuario[4] }}" />
+          <input
+            type="date"
+            class="input_user"
+            name="Fecha_Nacimiento"
+            id="fechaNacimiento"
+            value="{{ usuario[4] }}"
+          />
         </span>
       </p>
       <p>
         <label for="correo">Correo Electrónico</label>
         <span>
           <i class="fa-solid fa-envelope"></i>
-          <input type="email" class="input_user" name="Correo" id="correo" value="{{ usuario[5] }}" />
+          <input
+            type="email"
+            class="input_user"
+            name="Correo"
+            id="correo"
+            value="{{ usuario[5] }}"
+          />
         </span>
       </p>
       <p>
         <label for="celular">Celular</label>
         <span>
           <i class="fa-solid fa-mobile-screen-button"></i>
-          <input type="phone" class="input_user" name="Celular" id="celular" value="{{ usuario[6] }}" />
+          <input
+            type="phone"
+            class="input_user"
+            name="Celular"
+            id="celular"
+            value="{{ usuario[6] }}"
+          />
         </span>
       </p>
       <p>
         <label for="tipoUsuario">Tipo de Usuario</label>
         <span>
           <i class="fa-solid fa-ranking-star"></i>
-          <input type="text" class="input_user" name="Tipo_Usuario" id="tipoUsuario" value="{{ usuario[7] }}"
-            readonly />
+          <input
+            type="text"
+            class="input_user"
+            name="Tipo_Usuario"
+            id="tipoUsuario"
+            value="{{ usuario[7] }}"
+            readonly
+          />
         </span>
       </p>
       <p>
         <label for="anteriorContrasena">Anterior Contraseña</label>
         <span>
-          <input type="password" class="input_user" name="Anterior_Contrasena" id="anteriorContrasena"
-            placeholder="Anterior Contraseña" />
+          <input
+            type="password"
+            class="input_user"
+            name="Anterior_Contrasena"
+            id="anteriorContrasena"
+            placeholder="Anterior Contraseña"
+          />
         </span>
       </p>
       <p>
         <label for="nuevaContrasena">Nueva Contraseña</label>
         <span>
-          <input type="password" class="input_user" name="Nueva_Contrasena" id="nuevaContrasena"
-            placeholder="Nueva Contraseña" />
+          <input
+            type="password"
+            class="input_user"
+            name="Nueva_Contrasena"
+            id="nuevaContrasena"
+            placeholder="Nueva Contraseña"
+          />
         </span>
       </p>
       <p>
         <label for="repetirContrasena">Repetir Contraseña</label>
         <span>
-          <input type="password" class="input_user" name="Repetir_Contrasena" id="repetirContrasena"
-            placeholder="Repetir Contraseña" />
+          <input
+            type="password"
+            class="input_user"
+            name="Repetir_Contrasena"
+            id="repetirContrasena"
+            placeholder="Repetir Contraseña"
+          />
         </span>
       </p>
       <p>
-        <input class="btn-submit btn-submit-blue btnGuardar" type="submit" name="botonGuardar" value="Guardar"
-          onclick="document.getElementById('modal-id04').style.display='block'" data-open="modal-id04" />
+        <input
+          class="btn-submit btn-submit-blue btnGuardar"
+          type="submit"
+          name="botonGuardar"
+          value="Guardar"
+          onclick="document.getElementById('modal-id04').style.display='block'"
+          data-open="modal-id04"
+        />
       </p>
     </form>
   </section>
@@ -243,8 +368,11 @@
           <td>{{ reservas[i][3] }}</td>
           <td>
             <!-- <a href="/editarReview/{{reservas[i][0]}}" class="btnEditar" id="btnEditarComentario">Editar</a> -->
-            <a href="/eliminarReserveAdmin/{{reservas[i][0]}}"
-              class="btnEliminar btn-submit btn-submit-red">Eliminar</a>
+            <a
+              href="/eliminarReserveAdmin/{{reservas[i][0]}}"
+              class="btnEliminar btn-submit btn-submit-red"
+              >Eliminar</a
+            >
           </td>
           <!-- <td onclick="seleccionar(this,1)">
               <input type="checkbox" name="check[]" value="1" id="chk1" />
@@ -260,7 +388,6 @@
       </h4>
     </section> -->
   </section>
-
 
   <!-- LISTA COMENTARIOS -->
   <section class="reviews">
@@ -291,7 +418,11 @@
             <td>{{ comentarios[i][3] }}</td>
             <td>
               <!-- <a href="/editarReview/{{comentarios[i][0]}}" class="btnEditar" id="btnEditarComentario">Editar</a> -->
-              <a href="/editarReview/{{comentarios[i][0]}}" class="btn-submit btn-submit-blue">Editar</a>
+              <a
+                href="/editarReview/{{comentarios[i][0]}}"
+                class="btn-submit btn-submit-blue"
+                >Editar</a
+              >
             </td>
             <!-- <td onclick="seleccionar(this,1)">
                   <input type="checkbox" name="check[]" value="1" id="chk1" />
@@ -303,7 +434,6 @@
     </div>
   </section>
 </section>
-<script>
-</script>
+<script></script>
 
 {% endblock %}
