--- a/templates/reservas.html
+++ b/templates/reservas.html
@@ -1,99 +1,146 @@
 {% extends "base.html" %} {% block head %}
 
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-tables.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-forms.css') }}"
-/>
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/base-buttons.css') }}"
-/>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-tables.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-forms.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/base-buttons.css') }}" />
 
-<link
-  rel="stylesheet"
-  type="text/css"
-  href="{{ url_for('static', filename='css/reviews.css') }}"
-/>
-{% endblock %} 
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/reviews.css') }}" />
+{% endblock %}
 
 {% block content %}
 
-  <section class="dataUser">
-    <section class="booking form">
-        <h2>Reservas</h2>
-    </section>
+<section class="dataUser">
+  <section class="booking form">
+    <h2>Confirmar Reserva</h2>
+    <form action="/successful-booking/" class="form" method="POST">
+      <p>
+        <label for="check-in">Check-In</label>
+        <span>
+          <i class="fa-solid fa-id-card"></i>
+          <input type="date" class="input_booking" name="Check-In" id="Check-In-Booking" value="{{ reserva['check-in'] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="check-out">Check-Out</label>
+        <span>
+          <i class="fa-solid fa-person"></i>
+          <input type="date" class="input_booking" name="Check-Out" id="Check-Out-Booking" value="{{ reserva['check-out'] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="huespedes">Huéspedes</label>
+        <span>
+          <i class="fa-solid fa-person"></i>
+          <input type="number" class="input_booking" name="Huespedes" id="Huespedes" value="{{ reserva['huespedes'] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="habitaciones">Cantidad Habitaciones</label>
+        <span>
+          <i class="fa-solid fa-cake-candles"></i>
+          <input type="number" class="input_booking" name="Habitaciones" id="Habitaciones" value="{{ reserva['habitaciones'] }}" />
+        </span>
+      </p>
+      <p>
+        <label for="cantidadNoches">Cantidad de Noches</label>
+        <span>
+          <i class="fa-solid fa-cake-candles"></i>
+          <input type="text" class="input_booking" name="CantidadNoches" id="CantidadNoches" value="" readonly/>
+        </span>
+      </p>
+      <p>
+        <label for="precioTotalHabitacion">Precio por Habitacion</label>
+        <span>
+          <i class="fa-solid fa-cake-candles"></i>
+          <input type="text" class="input_booking" name="PrecioTotalHabitacion" id="PrecioTotalHabitacion" value="" readonly/>
+        </span>
+      </p>
+      <p>
+        <label for="valorTotal">Valor Total</label>
+        <span>
+          <i class="fa-solid fa-cake-candles"></i>
+          <input type="text" class="input_booking" name="ValorTotal" id="ValorTotal" value="" readonly/>
+        </span>
+      </p>
+
+      <div class="btn-submit-group">
+        <input class="btn-submit btn-submit-blue" type="submit" name="gestion_usuario" id = "Reservar-Booking" value="Reservar" />
+        <!-- <input class="btn-submit btn-submit-red" type="submit" name="gestion_usuario" value="Eliminar" /> -->
+        <input class="btn-submit btn-submit-gray" type="submit" name="gestion_usuario" id="cancelar_reserva"
+          value="Cancelar" />
+      </div>
+    </form>
+    <input class="btn-submit btn-submit-blue" type="submit" name="gestion_usuario" id = "verDisponibilidad" value="Ver Disponibilidad" />
+        
+  </section>
+
+  <section>
     <section>
-      <section>
 
       <form class="form" method="POST">
         <h2>Evalúa tu experiencia</h2>
-          <div class="star-rating" id="star-rating">
+        <div class="star-rating" id="star-rating">
 
-            <input type="radio" id="star5" name="rate" value="5" />
-            <label for="star5" title="text">5 stars</label>
-            <input type="radio" id="star4" name="rate" value="4" />
-            <label for="star4" title="text">4 stars</label>
-            <input type="radio" id="star3" name="rate" value="3" />
-            <label for="star3" title="text">3 stars</label>
-            <input type="radio" id="star2" name="rate" value="2" />
-            <label for="star2" title="text">2 stars</label>
-            <input type="radio" id="star1" name="rate" value="1" />
-            <label for="star1" title="text">1 star</label>
-          </div>
+          <input type="radio" id="star5" name="rate" value="5" />
+          <label for="star5" title="text">5 stars</label>
+          <input type="radio" id="star4" name="rate" value="4" />
+          <label for="star4" title="text">4 stars</label>
+          <input type="radio" id="star3" name="rate" value="3" />
+          <label for="star3" title="text">3 stars</label>
+          <input type="radio" id="star2" name="rate" value="2" />
+          <label for="star2" title="text">2 stars</label>
+          <input type="radio" id="star1" name="rate" value="1" />
+          <label for="star1" title="text">1 star</label>
+        </div>
 
         <p class="form__input">
           <label for="entry" class="form__label">Escribe aquí:</label>
           <span>
             <i class="fa-solid fa-book-open"></i>
-            <textarea
-            name="review-content"
-            id="entry"
-            class="form__textarea"
-            placeholder="Adelante... desahogate aquí persona subyugada por la sociedad opresora"
-            ></textarea>
+            <textarea name="review-content" id="entry" class="form__textarea"
+              placeholder="Adelante... desahogate aquí persona subyugada por la sociedad opresora"></textarea>
           </span>
-            <div class="btn-submit-group">
-              <button type="submit" class="btn-submit btn-submit-blue form__submit">Enviar</button>
-            </div>
+        <div class="btn-submit-group">
+          <button type="submit" class="btn-submit btn-submit-blue form__submit">Enviar</button>
+        </div>
         </p>
       </form>
-      </section>
+    </section>
     <section>
 
 
-        <h2 class="form">Comentarios Recientes</h2>
-        {% for entry in review_entries %}
-          <section class="form entry">
-            <div>
-              <h3 class="entry__title">
-                {{ entry[1] | truncate(30, true) }} •
-                <span class=>
-                  {% if entry[0] == '1' %}
-                    <font color="orange">★</font>★★★★ {% elif entry[0] == '2' %}
-                    <font color="orange">★★</font>★★★ {% elif entry[0] == '3' %}
-                    <font color="orange">★★★</font>★★ {% elif entry[0] == '4' %}
-                    <font color="orange">★★★★</font>★ {% elif entry[0] == '5' %}
-                    <font color="orange">★★★★★</font>
-                  {% else %} ★★★★★ 
-                  {% endif %}
-                </span>
-              </h3>
-              <time class="entry__date" datetime="{{ entry[2] }}">
-                Usuario • {{ entry[3] }}
-              </time>
-            </div>
-            <p class="entry__content">{{ entry[1] }}</p>
-          </section>
-        {% endfor %}
+      <h2 class="form">Comentarios Recientes</h2>
+      {% for entry in review_entries %}
+      <section class="form entry">
+        <div>
+          <h3 class="entry__title">
+            {{ entry[1] | truncate(30, true) }} •
+            <span class=>
+              {% if entry[0] == '1' %}
+              <font color="orange">★</font>★★★★ {% elif entry[0] == '2' %}
+              <font color="orange">★★</font>★★★ {% elif entry[0] == '3' %}
+              <font color="orange">★★★</font>★★ {% elif entry[0] == '4' %}
+              <font color="orange">★★★★</font>★ {% elif entry[0] == '5' %}
+              <font color="orange">★★★★★</font>
+              {% else %} ★★★★★
+              {% endif %}
+            </span>
+          </h3>
+          <time class="entry__date" datetime="{{ entry[2] }}">
+            Usuario • {{ entry[3] }}
+          </time>
+        </div>
+        <p class="entry__content">{{ entry[1] }}</p>
+      </section>
+      {% endfor %}
     </section>
-    
+
 
   </section>
+
+</section>
+{% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/agregarAdmin.js' ) }}"></script>
 {% endblock %}
